--- a/index.html
+++ b/index.html
@@ -16,7 +16,27 @@
 </head>
 
 <body>
+    <nav>
+        <div class="navbar">
+            <a href="#home" class="border">Home</a>
+            <a href="#onas" class="border">O nas</a>
+            <a href="#portfolio" class="border">Portfolio</a>
+            <a href="#kontakt">Kontakt</a>
+        </div>
+    </nav>
+    <header>
+        <div class="welcome bgr">
+            <h1>WebTeam</h1>
+            <p>jesteśmy tu dla Ciebie</p>
+        </div>
+    </header>
+    <section></section>
+    </section>
+    <section></section>
+    <section></section>
+    <footer>
 
+    </footer>
 </body>
 
 
