--- a/index.html
+++ b/index.html
@@ -30,6 +30,29 @@
             <p>jesteśmy tu dla Ciebie</p>
         </div>
     </header>
+    <div class="row">
+
+        <div class="column">
+            <img src="images/natalia.png" alt="Natalia"
+                style="width:100%; box-shadow: 6px 9px 15px 4px rgba(0, 0, 0, 0.3); border-radius: 50%;">
+            <h1>Natalia</h1>
+            <h2>Front-end Developer</h2>
+
+        </div>
+        <div class="column">
+            <img src="images/robert.png" alt="Robert"
+                style="width:100%; box-shadow: 6px 9px 15px 4px rgba(0, 0, 0, 0.3); border-radius: 50%;">
+            <h1>Robert</h1>
+            <h2>Back-end Developer</h2>
+        </div>
+        <div class="column">
+            <img src="images/justyna.png" alt="Justyna"
+                style="width:100%; box-shadow: 6px 9px 15px 4px rgba(0, 0, 0, 0.3); border-radius: 50%;">
+            <h1>Justyna</h1>
+            <h2>UI/UX Designer</h2>
+        </div>
+
+    </div>
     <section></section>
     </section>
     <section></section>
