--- a/index.html
+++ b/index.html
@@ -53,6 +53,17 @@
         </div>
 
     </div>
+    <div class="personality">
+        <div class="about">
+            <p>Natalia</p>
+        </div>
+        <div class="about">
+            <p>Robert</p>
+        </div>
+        <div class="about">
+            <p>Jagoda</p>
+        </div>
+    </div>
     <section></section>
     </section>
     <section></section>
