--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     </div>
     <div class="personality">
         <div class="about">
-            <p>Natalia</p>
+            <p>Natalia, lat 20</p>
         </div>
         <div class="about">
             <p>Robert</p>
