--- a/index.html
+++ b/index.html
@@ -54,14 +54,53 @@
 
     </div>
     <div class="personality">
-        <div class="about">
-            <p>Natalia, lat 20</p>
+        <div class="box">
+            <div class="about">
+                <img src="images/natalia.png" alt="Natalia">
+                <div class="personal_data">
+                    <h3>Natalia</h3>
+                    <h4>Wiek: 25 lat</h4>
+                </div>
+            </div>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit eligendi dignissimos sequi voluptatum non
+                sapiente nam temporibus quam eius quaerat ipsam quos officiis enim error, officia quia dolor atque
+                suscipit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad sit, sed quisquam, minus
+                recusandae vel exercitationem nesciunt numquam porro eveniet officia distinctio corporis consectetur
+                tempore ea sint illum? Consequatur, accusantium. Lorem ipsum dolor sit amet consectetur adipisicing
+                elit. Unde odio nobis odit, beatae voluptatibus necessitatibus molestiae nesciunt placeat dolores illum
+                laboriosam recusandae? Sequi reiciendis, quae dolorem nulla recusandae repudiandae esse.</p>
         </div>
-        <div class="about">
-            <p>Robert</p>
+        <div class="box">
+            <div class="about">
+                <img src="images/robert.png" alt="Robert">
+                <div class="personal_data">
+                    <h3>Robert</h3>
+                    <h4>Wiek: 55 lat</h4>
+                </div>
+            </div>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit eligendi dignissimos sequi voluptatum non
+                sapiente nam temporibus quam eius quaerat ipsam quos officiis enim error, officia quia dolor atque
+                suscipit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad sit, sed quisquam, minus
+                recusandae vel exercitationem nesciunt numquam porro eveniet officia distinctio corporis consectetur
+                tempore ea sint illum? Consequatur, accusantium. Lorem ipsum dolor sit amet consectetur adipisicing
+                elit. Unde odio nobis odit, beatae voluptatibus necessitatibus molestiae nesciunt placeat dolores illum
+                laboriosam recusandae? Sequi reiciendis, quae dolorem nulla recusandae repudiandae esse.</p>
         </div>
-        <div class="about">
-            <p>Jagoda</p>
+        <div class="box">
+            <div class="about">
+                <img src="images/justyna.png" alt="Justyna">
+                <div class="personal_data">
+                    <h3>Justyna</h3>
+                    <h4>Wiek: 35 lat</h4>
+                </div>
+            </div>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit eligendi dignissimos sequi voluptatum non
+                sapiente nam temporibus quam eius quaerat ipsam quos officiis enim error, officia quia dolor atque
+                suscipit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad sit, sed quisquam, minus
+                recusandae vel exercitationem nesciunt numquam porro eveniet officia distinctio corporis consectetur
+                tempore ea sint illum? Consequatur, accusantium. Lorem ipsum dolor sit amet consectetur adipisicing
+                elit. Unde odio nobis odit, beatae voluptatibus necessitatibus molestiae nesciunt placeat dolores illum
+                laboriosam recusandae? Sequi reiciendis, quae dolorem nulla recusandae repudiandae esse.</p>
         </div>
     </div>
     <section></section>
