--- a/index.html
+++ b/index.html
@@ -19,18 +19,19 @@
     <nav>
         <div class="navbar">
             <a href="#home" class="border">Home</a>
+            <a href="#ekipa" class="border">Ekipa</a>
             <a href="#onas" class="border">O nas</a>
             <a href="#portfolio" class="border">Portfolio</a>
             <a href="#kontakt">Kontakt</a>
         </div>
     </nav>
-    <header>
+    <header id="home">
         <div class="welcome bgr">
             <h1>WebTeam</h1>
             <p>jesteśmy tu dla Ciebie</p>
         </div>
     </header>
-    <div class="row">
+    <div class="row" id="ekipa">
 
         <div class="column">
             <img src="images/natalia.png" alt="Natalia"
@@ -53,7 +54,7 @@
         </div>
 
     </div>
-    <div class="personality">
+    <div class="personality" id="onas">
         <div class="box">
             <div class="about">
                 <img src="images/natalia.png" alt="Natalia">
@@ -70,7 +71,7 @@
                 elit. Unde odio nobis odit, beatae voluptatibus necessitatibus molestiae nesciunt placeat dolores illum
                 laboriosam recusandae? Sequi reiciendis, quae dolorem nulla recusandae repudiandae esse.</p>
         </div>
-        <div class="box">
+        <div class="box margin_personality">
             <div class="about">
                 <img src="images/robert.png" alt="Robert">
                 <div class="personal_data">
@@ -103,10 +104,51 @@
                 laboriosam recusandae? Sequi reiciendis, quae dolorem nulla recusandae repudiandae esse.</p>
         </div>
     </div>
-    <section></section>
-    </section>
-    <section></section>
-    <section></section>
+
+    <div class="album">
+        <div class="incognito" id="portfolio"></div>
+        <div class="container">
+            <div class="photo photo_1"></div>
+            <div class="text">
+                <h3>Tytuł</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque iste modi at omnis perferendis,
+                    placeat provident rerum in vitae pariatur ab cumque nobis eaque, repudiandae laboriosam consectetur
+                    illum reiciendis molliti. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Labore sapiente
+                    fuga, aperiam assumenda dicta cum inventore autem nam ab vitae doloribus quis repellat ex illum,
+                    quod, mollitia natus accusamus et.Alias distinctio, tempore, sunt facere optio doloremque dolor
+                    similique voluptatibus illum itaque maxime harum corporis nam, dolores officiis nesciunt. Molestias
+                    nulla eveniet, magnam quo sunt praesentium ipsa consequatur dolorum accusantium?</p>
+            </div>
+        </div>
+        <div class="container">
+            <div class="text">
+                <h3>Tytuł</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque iste modi at omnis perferendis,
+                    placeat provident rerum in vitae pariatur ab cumque nobis eaque, repudiandae laboriosam consectetur
+                    illum reiciendis mollitia. Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque
+                    minus, quidem pariatur debitis explicabo sunt tenetur illum tempora eaque ipsum molestias cumque ad
+                    sed necessitatibus accusamus deserunt consectetur, asperiores architecto? Lorem ipsum dolor sit amet
+                    consectetur adipisicing elit. Rerum, harum sapiente et facere exercitationem natus deserunt voluptas
+                    corporis culpa molestiae ad reiciendis quaerat odio aliquam quis quibusdam placeat delectus impedit.
+                </p>
+            </div>
+            <div class="photo photo_2"></div>
+        </div>
+        <div class="container">
+            <div class="photo photo_3"></div>
+            <div class="text">
+                <h3>Tytuł</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque iste modi at omnis perferendis,
+                    placeat provident rerum in vitae pariatur ab cumque nobis eaque, repudiandae laboriosam consectetur
+                    illum reiciendis mollitia. Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni maiores
+                    blanditiis quis laudantium odit reprehenderit provident deleniti deserunt dolore! Amet totam
+                    architecto labore, soluta reiciendis velit magni dignissimos maxime quas.Aspernatur, maiores eaque
+                    dolor quis nihil esse illum voluptatem perferendis sed saepe libero in ratione asperiores. Odio
+                    soluta officiis laboriosam corrupti! Officia error excepturi consectetur nihil, expedita saepe
+                    provident eveniet?</p>
+            </div>
+        </div>
+    </div>
     <footer>
 
     </footer>
