--- a/index.html
+++ b/index.html
@@ -18,18 +18,25 @@
 <body>
     <nav>
         <div class="navbar">
-            <a href="#home" class="border">Home</a>
+
+            <!-- <a href="#home" class="border">Home</a> -->
             <a href="#ekipa" class="border">Ekipa</a>
             <a href="#onas" class="border">O nas</a>
             <a href="#portfolio" class="border">Portfolio</a>
             <a href="#kontakt">Kontakt</a>
         </div>
+
     </nav>
+
+    <div class="logo">
+        <a href="#home"><img src="images/your-logo.png"></a>
+    </div>
+
     <header id="home">
         <div class="welcome bgr">
             <h1>WebTeam</h1>
             <p>jesteśmy tu dla Ciebie</p>
-        </div>
+
     </header>
     <div class="row" id="ekipa">
 
@@ -63,12 +70,14 @@
                     <h4>Wiek: 25 lat</h4>
                 </div>
             </div>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit eligendi dignissimos sequi voluptatum non
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit eligendi dignissimos sequi voluptatum
+                non
                 sapiente nam temporibus quam eius quaerat ipsam quos officiis enim error, officia quia dolor atque
                 suscipit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad sit, sed quisquam, minus
                 recusandae vel exercitationem nesciunt numquam porro eveniet officia distinctio corporis consectetur
                 tempore ea sint illum? Consequatur, accusantium. Lorem ipsum dolor sit amet consectetur adipisicing
-                elit. Unde odio nobis odit, beatae voluptatibus necessitatibus molestiae nesciunt placeat dolores illum
+                elit. Unde odio nobis odit, beatae voluptatibus necessitatibus molestiae nesciunt placeat dolores
+                illum
                 laboriosam recusandae? Sequi reiciendis, quae dolorem nulla recusandae repudiandae esse.</p>
         </div>
         <div class="box margin_personality">
@@ -79,12 +88,14 @@
                     <h4>Wiek: 55 lat</h4>
                 </div>
             </div>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit eligendi dignissimos sequi voluptatum non
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit eligendi dignissimos sequi voluptatum
+                non
                 sapiente nam temporibus quam eius quaerat ipsam quos officiis enim error, officia quia dolor atque
                 suscipit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad sit, sed quisquam, minus
                 recusandae vel exercitationem nesciunt numquam porro eveniet officia distinctio corporis consectetur
                 tempore ea sint illum? Consequatur, accusantium. Lorem ipsum dolor sit amet consectetur adipisicing
-                elit. Unde odio nobis odit, beatae voluptatibus necessitatibus molestiae nesciunt placeat dolores illum
+                elit. Unde odio nobis odit, beatae voluptatibus necessitatibus molestiae nesciunt placeat dolores
+                illum
                 laboriosam recusandae? Sequi reiciendis, quae dolorem nulla recusandae repudiandae esse.</p>
         </div>
         <div class="box">
@@ -95,12 +106,14 @@
                     <h4>Wiek: 35 lat</h4>
                 </div>
             </div>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit eligendi dignissimos sequi voluptatum non
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit eligendi dignissimos sequi voluptatum
+                non
                 sapiente nam temporibus quam eius quaerat ipsam quos officiis enim error, officia quia dolor atque
                 suscipit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad sit, sed quisquam, minus
                 recusandae vel exercitationem nesciunt numquam porro eveniet officia distinctio corporis consectetur
                 tempore ea sint illum? Consequatur, accusantium. Lorem ipsum dolor sit amet consectetur adipisicing
-                elit. Unde odio nobis odit, beatae voluptatibus necessitatibus molestiae nesciunt placeat dolores illum
+                elit. Unde odio nobis odit, beatae voluptatibus necessitatibus molestiae nesciunt placeat dolores
+                illum
                 laboriosam recusandae? Sequi reiciendis, quae dolorem nulla recusandae repudiandae esse.</p>
         </div>
     </div>
@@ -111,26 +124,41 @@
             <div class="photo photo_1"></div>
             <div class="text">
                 <h3>Tytuł</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque iste modi at omnis perferendis,
-                    placeat provident rerum in vitae pariatur ab cumque nobis eaque, repudiandae laboriosam consectetur
-                    illum reiciendis molliti. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Labore sapiente
-                    fuga, aperiam assumenda dicta cum inventore autem nam ab vitae doloribus quis repellat ex illum,
-                    quod, mollitia natus accusamus et.Alias distinctio, tempore, sunt facere optio doloremque dolor
-                    similique voluptatibus illum itaque maxime harum corporis nam, dolores officiis nesciunt. Molestias
-                    nulla eveniet, magnam quo sunt praesentium ipsa consequatur dolorum accusantium?</p>
+                <div class="border_2">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque iste modi at omnis
+                        perferendis,
+                        placeat provident rerum in vitae pariatur ab cumque nobis eaque, repudiandae laboriosam
+                        consectetur
+                        illum reiciendis molliti. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Labore
+                        sapiente
+                        fuga, aperiam assumenda dicta cum inventore autem nam ab vitae doloribus quis repellat ex
+                        illum,
+                        quod, mollitia natus accusamus et.Alias distinctio, tempore, sunt facere optio doloremque
+                        dolor
+                        similique voluptatibus illum itaque maxime harum corporis nam, dolores officiis nesciunt.
+                        Molestias
+                        nulla eveniet, magnam quo sunt praesentium ipsa consequatur dolorum accusantium?</p>
+                </div>
             </div>
         </div>
         <div class="container">
             <div class="text">
                 <h3>Tytuł</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque iste modi at omnis perferendis,
-                    placeat provident rerum in vitae pariatur ab cumque nobis eaque, repudiandae laboriosam consectetur
-                    illum reiciendis mollitia. Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque
-                    minus, quidem pariatur debitis explicabo sunt tenetur illum tempora eaque ipsum molestias cumque ad
-                    sed necessitatibus accusamus deserunt consectetur, asperiores architecto? Lorem ipsum dolor sit amet
-                    consectetur adipisicing elit. Rerum, harum sapiente et facere exercitationem natus deserunt voluptas
-                    corporis culpa molestiae ad reiciendis quaerat odio aliquam quis quibusdam placeat delectus impedit.
-                </p>
+                <div class="border_2">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque iste modi at omnis
+                        perferendis,
+                        placeat provident rerum in vitae pariatur ab cumque nobis eaque, repudiandae laboriosam
+                        consectetur
+                        illum reiciendis molliti. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Labore
+                        sapiente
+                        fuga, aperiam assumenda dicta cum inventore autem nam ab vitae doloribus quis repellat ex
+                        illum,
+                        quod, mollitia natus accusamus et.Alias distinctio, tempore, sunt facere optio doloremque
+                        dolor
+                        similique voluptatibus illum itaque maxime harum corporis nam, dolores officiis nesciunt.
+                        Molestias
+                        nulla eveniet, magnam quo sunt praesentium ipsa consequatur dolorum accusantium?</p>
+                </div>
             </div>
             <div class="photo photo_2"></div>
         </div>
@@ -138,21 +166,55 @@
             <div class="photo photo_3"></div>
             <div class="text">
                 <h3>Tytuł</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque iste modi at omnis perferendis,
-                    placeat provident rerum in vitae pariatur ab cumque nobis eaque, repudiandae laboriosam consectetur
-                    illum reiciendis mollitia. Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni maiores
-                    blanditiis quis laudantium odit reprehenderit provident deleniti deserunt dolore! Amet totam
-                    architecto labore, soluta reiciendis velit magni dignissimos maxime quas.Aspernatur, maiores eaque
-                    dolor quis nihil esse illum voluptatem perferendis sed saepe libero in ratione asperiores. Odio
-                    soluta officiis laboriosam corrupti! Officia error excepturi consectetur nihil, expedita saepe
-                    provident eveniet?</p>
+                <div class="border_2">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque iste modi at omnis
+                        perferendis,
+                        placeat provident rerum in vitae pariatur ab cumque nobis eaque, repudiandae laboriosam
+                        consectetur
+                        illum reiciendis molliti. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Labore
+                        sapiente
+                        fuga, aperiam assumenda dicta cum inventore autem nam ab vitae doloribus quis repellat ex
+                        illum,
+                        quod, mollitia natus accusamus et.Alias distinctio, tempore, sunt facere optio doloremque
+                        dolor
+                        similique voluptatibus illum itaque maxime harum corporis nam, dolores officiis nesciunt.
+                        Molestias
+                        nulla eveniet, magnam quo sunt praesentium ipsa consequatur dolorum accusantium?</p>
+                </div>
             </div>
         </div>
     </div>
-    <footer>
 
-    </footer>
+    <section class="contact">
+        <div class="incognito" id="kontakt"></div>
+        <h1>Skontaktuj się z nami</h1>
+        <div class="wrap">
+
+            <div>
+                <form>
+                    <input type="text" placeholder="Twoje imię">
+                    <input type="text" placeholder="Email">
+                    <textarea placeholder="Twoja wiadomość"></textarea>
+                    <button>Wyślij wiadomość</button>
+                </form>
+            </div>
+            <div class="socials">
+                <img src="images/contact1.png" alt="kontakt">
+                <img src="images/contact2.png" alt="kontakt">
+                <img src="images/contact3.png" alt="kontakt" style="border-radius: 50%;">
+                <img src="images/contact4.png" alt="kontakt" style="border-radius: 50%;">
+
+            </div>
+        </div>
+
+
+        </div>
+
+        </div>
+
+
+    </section>
+
 </body>
-
 
 </html>
