--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-    <nav>
+    <nav class="navbar_1">
         <div class="navbar">
 
             <!-- <a href="#home" class="border">Home</a> -->
@@ -27,6 +27,7 @@
         </div>
 
     </nav>
+
 
     <div class="logo">
         <a href="#home"><img src="images/your-logo.png"></a>
