change for mobile

--- a/index.html
+++ b/index.html
@@ -63,7 +63,8 @@
 
 
     </div>
-    <div class="personality" id="onas">
+    <div class="personality">
+        <div class="incognito" id="onas"></div>
         <div class="box">
             <div class="about">
                 <img src="images/natalia.png" alt="Natalia">
