--- a/index.html
+++ b/index.html
@@ -73,15 +73,26 @@
                     <h4>Wiek: 25 lat</h4>
                 </div>
             </div>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit eligendi dignissimos sequi voluptatum
-                non
-                sapiente nam temporibus quam eius quaerat ipsam quos officiis enim error, officia quia dolor atque
-                suscipit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad sit, sed quisquam, minus
-                recusandae vel exercitationem nesciunt numquam porro eveniet officia distinctio corporis consectetur
-                tempore ea sint illum? Consequatur, accusantium. Lorem ipsum dolor sit amet consectetur adipisicing
-                elit. Unde odio nobis odit, beatae voluptatibus necessitatibus molestiae nesciunt placeat dolores
-                illum
-                laboriosam recusandae? Sequi reiciendis, quae dolorem nulla recusandae repudiandae esse.</p>
+            <div class="input_class">
+                <input type="checkbox" class="read-more-state" id="post-1" />
+                <p class="read-more-wrap">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit eligendi
+                    dignissimos
+                    sequi voluptatum non sapiente nam temporibus quam eius quaerat ipsam quos officiis enim error,
+                    officia
+                    quia dolor atque
+                    suscipit. <span class="read-more-target">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad
+                        sit, sed quisquam, minus
+                        recusandae vel exercitationem nesciunt numquam porro eveniet officia distinctio corporis
+                        consectetur
+                        tempore ea sint illum? Consequatur, accusantium. Lorem ipsum dolor sit amet consectetur
+                        adipisicing
+                        elit. Unde odio nobis odit, beatae voluptatibus necessitatibus molestiae nesciunt placeat
+                        dolores
+                        illum
+                        laboriosam recusandae? Sequi reiciendis, quae dolorem nulla recusandae repudiandae esse.
+                        lorem</span></p>
+                <label for="post-1" class="read-more-trigger"></label>
+            </div>
         </div>
         <div class="box margin_personality">
             <div class="about">
@@ -91,15 +102,26 @@
                     <h4>Wiek: 55 lat</h4>
                 </div>
             </div>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit eligendi dignissimos sequi voluptatum
-                non
-                sapiente nam temporibus quam eius quaerat ipsam quos officiis enim error, officia quia dolor atque
-                suscipit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad sit, sed quisquam, minus
-                recusandae vel exercitationem nesciunt numquam porro eveniet officia distinctio corporis consectetur
-                tempore ea sint illum? Consequatur, accusantium. Lorem ipsum dolor sit amet consectetur adipisicing
-                elit. Unde odio nobis odit, beatae voluptatibus necessitatibus molestiae nesciunt placeat dolores
-                illum
-                laboriosam recusandae? Sequi reiciendis, quae dolorem nulla recusandae repudiandae esse.</p>
+            <div class="input_class">
+                <input type="checkbox" class="read-more-state" id="post-2" />
+                <p class="read-more-wrap">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit eligendi
+                    dignissimos
+                    sequi voluptatum non sapiente nam temporibus quam eius quaerat ipsam quos officiis enim error,
+                    officia
+                    quia dolor atque
+                    suscipit. <span class="read-more-target">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad
+                        sit, sed quisquam, minus
+                        recusandae vel exercitationem nesciunt numquam porro eveniet officia distinctio corporis
+                        consectetur
+                        tempore ea sint illum? Consequatur, accusantium. Lorem ipsum dolor sit amet consectetur
+                        adipisicing
+                        elit. Unde odio nobis odit, beatae voluptatibus necessitatibus molestiae nesciunt placeat
+                        dolores
+                        illum
+                        laboriosam recusandae? Sequi reiciendis, quae dolorem nulla recusandae repudiandae esse.
+                        lorem</span></p>
+                <label for="post-2" class="read-more-trigger"></label>
+            </div>
         </div>
         <div class="box">
             <div class="about">
@@ -109,15 +131,26 @@
                     <h4>Wiek: 35 lat</h4>
                 </div>
             </div>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit eligendi dignissimos sequi voluptatum
-                non
-                sapiente nam temporibus quam eius quaerat ipsam quos officiis enim error, officia quia dolor atque
-                suscipit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad sit, sed quisquam, minus
-                recusandae vel exercitationem nesciunt numquam porro eveniet officia distinctio corporis consectetur
-                tempore ea sint illum? Consequatur, accusantium. Lorem ipsum dolor sit amet consectetur adipisicing
-                elit. Unde odio nobis odit, beatae voluptatibus necessitatibus molestiae nesciunt placeat dolores
-                illum
-                laboriosam recusandae? Sequi reiciendis, quae dolorem nulla recusandae repudiandae esse.</p>
+            <div class="input_class">
+                <input type="checkbox" class="read-more-state" id="post-3" />
+                <p class="read-more-wrap">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit eligendi
+                    dignissimos
+                    sequi voluptatum non sapiente nam temporibus quam eius quaerat ipsam quos officiis enim error,
+                    officia
+                    quia dolor atque
+                    suscipit. <span class="read-more-target">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad
+                        sit, sed quisquam, minus
+                        recusandae vel exercitationem nesciunt numquam porro eveniet officia distinctio corporis
+                        consectetur
+                        tempore ea sint illum? Consequatur, accusantium. Lorem ipsum dolor sit amet consectetur
+                        adipisicing
+                        elit. Unde odio nobis odit, beatae voluptatibus necessitatibus molestiae nesciunt placeat
+                        dolores
+                        illum
+                        laboriosam recusandae? Sequi reiciendis, quae dolorem nulla recusandae repudiandae esse.
+                        lorem</span></p>
+                <label for="post-3" class="read-more-trigger"></label>
+            </div>
         </div>
     </div>
 
@@ -188,8 +221,8 @@
         </div>
     </div>
 
-    <section class="contact">
-        <div class="incognito" id="kontakt"></div>
+    <section class="contact" id="kontakt">
+
         <h1>Skontaktuj się z nami</h1>
         <div class="wrap">
 
